--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,31 @@ services:
       POSTGRES_PASSWORD: custompassword
       POSTGRES_DB: customdb
     ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - "5433:5432"
 
-volumes:
-  postgres_data:
+  liquibase:
+    image: liquibase/liquibase:4.24-alpine
+    depends_on:
+      - postgres
+    volumes:
+      - ./src/main/resources/db/changelog:/liquibase/changelog
+    entrypoint: ["liquibase", "--url=jdbc:postgresql://postgres:5432/customdb",
+                 "--username=customuser", "--password=custompassword",
+                 "--changeLogFile=/changelog/master.xml", "update"]
+
+  my-app:
+    image: app-image
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+      - liquibase
+    environment:
+      - environment=docker
+
+
+
+
