--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,21 @@
 jwt:
   secret: MANGO
 
-database:
-  url: jdbc:postgresql://localhost:5432/wallet_service_db
-  user: valeriali
-  password: postgres
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/wallet_service_db
+    username: valeriali
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+  liquibase:
+    change-log: classpath:/liquibase/db/changelog/master.xml
+    default-schema: migration
 
-driver:
-  org:
-    postgresql: Driver
+logging:
+  level:
+    org.springframework: DEBUG
+    org.springframework.jdbc.datasource: TRACE
+
 
 
 
