--- a/audit-starter/pom.xml
+++ b/audit-starter/pom.xml
@@ -6,18 +6,21 @@
         <version>3.1.5</version>
         <relativePath/>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
     <artifactId>audit-starter</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>audit-starter</name>
     <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -46,7 +49,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>ru.ylab</groupId>
             <artifactId>common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
