--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <modules>
     <module>audit-starter</module>
     <module>logging-starter</module>
+    <module>common</module>
   </modules>
 
   <parent>
@@ -34,17 +35,19 @@
 
   </build>
 
-
-
   <dependencies>
-
-
-
     <dependency>
       <groupId>ru.ylab</groupId>
       <artifactId>common</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>2.2</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.example</groupId>
