--- a/audit-starter/pom.xml
+++ b/audit-starter/pom.xml
@@ -12,7 +12,7 @@
     <groupId>org.example</groupId>
     <artifactId>audit-starter</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>audit-starter</name>
     <url>http://maven.apache.org</url>
@@ -34,13 +34,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
-            <version>3.1.5</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-            <version>3.1.5</version>
         </dependency>
 
         <dependency>
