--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,7 +47,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Render CLI
-        run: curl -fsSL https://cli.render.com/install.sh | bash
+        run: |
+          curl -fsSL https://cli.render.com/install.sh | bash
+          echo "$HOME/.render/bin" >> $GITHUB_PATH
 
       - name: Deploy to Render
         env:
